objects/Sales_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales History</relationshipLabel>
        <relationshipName>Sales_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Catalogs_Last12_Months__c</fullName>
        <description>Number of catalogs sent in last 12 month (rolling 12 months).</description>
        <inlineHelpText>Number of catalogs sent in last 12 month (rolling 12 months)</inlineHelpText>
        <label>Catalogs Last 12 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Catalogs_Last3_Months__c</fullName>
        <description>Number of catalogs sent in last 3 month (rolling 3 months).</description>
        <inlineHelpText>Number of catalogs sent in last 3 month (rolling 3 months)</inlineHelpText>
        <label>Catalogs Last 3 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Catalogs_Last6_Months__c</fullName>
        <description>Number of catalogs sent in last 6 month (rolling 6 months).</description>
        <inlineHelpText>Number of catalogs sent in last 6 month (rolling 6 months)</inlineHelpText>
        <label>Catalogs Last 6 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Catalogs_Last_Month__c</fullName>
        <description>Number of catalogs sent last month (rolling month).</description>
        <inlineHelpText>Number of catalogs sent last month (rolling month)</inlineHelpText>
        <label>Catalogs Last Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>MDM External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales History</relationshipLabel>
        <relationshipName>Sales_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Current_Month_Previous_Year__c</fullName>
        <description>Sum of invoiced revenue in current month in previous year (month to date).</description>
        <inlineHelpText>Sum of invoiced revenue in current month in previous year (month to date)</inlineHelpText>
        <label>Revenue Current Month Previous Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Current_Month__c</fullName>
        <description>Sum of invoiced revenue in current month (month to date).</description>
        <inlineHelpText>Sum of invoiced revenue in current month (month to date)</inlineHelpText>
        <label>Revenue Current Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Current_Year__c</fullName>
        <description>Sum of invoiced revenue in current year (year to date).</description>
        <inlineHelpText>Sum of invoiced revenue in current year (year to date)</inlineHelpText>
        <label>Revenue Current Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Last12_Months_Previous_Year__c</fullName>
        <description>Sum of invoiced revenue in last 12 months in previous year (rolling 12 months).</description>
        <inlineHelpText>Sum of invoiced revenue in last 12 months in previous year (rolling 12 months)</inlineHelpText>
        <label>Revenue Last 12 Months Previous Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Last12_Months__c</fullName>
        <description>Sum of invoiced revenue in last 12 months (rolling 12 months).</description>
        <inlineHelpText>Sum of invoiced revenue in last 12 months (rolling 12 months)</inlineHelpText>
        <label>Revenue Last 12 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Last3_Months_Previous_Year__c</fullName>
        <description>Sum of invoiced revenue in last 3 months in previous year (rolling 3 months).</description>
        <inlineHelpText>Sum of invoiced revenue in last 3 months in previous year (rolling 3 months)</inlineHelpText>
        <label>Revenue Last 3 Months Previous Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Last3_Months__c</fullName>
        <description>Sum of invoiced revenue in last 3 months (rolling 3 months).</description>
        <inlineHelpText>Sum of invoiced revenue in last 3 months (rolling 3 months)</inlineHelpText>
        <label>Revenue Last 3 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Last6_Months_Previous_Year__c</fullName>
        <description>Sum of invoiced revenue in last 6 months in previous year (rolling 6 months).</description>
        <inlineHelpText>Sum of invoiced revenue in last 6 months in previous year (rolling 6 months)</inlineHelpText>
        <label>Revenue Last 6 Months Previous Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Last6_Months__c</fullName>
        <description>Sum of invoiced revenue in last 6 months (rolling 6 months).</description>
        <inlineHelpText>Sum of invoiced revenue in last 6 months (rolling 6 months)</inlineHelpText>
        <label>Revenue Last 6 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Last_Month_Previous_Year__c</fullName>
        <description>Sum of invoiced revenue last month in previous year (rolling month).</description>
        <inlineHelpText>Sum of invoiced revenue last month in previous year (rolling month)</inlineHelpText>
        <label>Revenue Last Month Previous Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Last_Month__c</fullName>
        <description>Sum of invoiced revenue last month (rolling month).</description>
        <inlineHelpText>Sum of invoiced revenue last month (rolling month)</inlineHelpText>
        <label>Revenue Last Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Previous_Year__c</fullName>
        <description>Sum of invoiced revenue in previous year (year to date).</description>
        <inlineHelpText>Sum of invoiced revenue in previous year (year to date)</inlineHelpText>
        <label>Revenue Previous Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Samples_Last_12_Months__c</fullName>
        <description>Number of sample lines in last 12 month (rolling 12 months).</description>
        <inlineHelpText>Number of sample lines in last 12 month (rolling 12 months)</inlineHelpText>
        <label>Samples Last 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Samples_Last_3_Months__c</fullName>
        <description>Number of sample lines in last 3 month (rolling 3 months).</description>
        <inlineHelpText>Number of sample lines in last 3 month (rolling 3 months)</inlineHelpText>
        <label>Samples Last 3 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Samples_Last_6_Months__c</fullName>
        <description>Number of sample lines in last 6 month (rolling 6 months).</description>
        <inlineHelpText>Number of sample lines in last 6 month (rolling 6 months)</inlineHelpText>
        <label>Samples Last 6 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Samples_Last_Month__c</fullName>
        <description>Number of sample lines last month (rolling month).</description>
        <inlineHelpText>Number of sample lines last month (rolling month)</inlineHelpText>
        <label>Samples Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales History</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Sales History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>